data/derived/sp14/progs/unify/prog3792.ml.out
Characters 139-140:
  | true  -> 1 :: 2;;
                  ^
Error: This expression has type int but an expression was expected of type
         int list
